tests/data/negative/test_data_undef_ref.orb
data Foo;

fnc main() {
    Foo* f;
    *f;
}